Bug 168852 - Crash on profile application
Summary: Crash on profile application
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ColorManagement-Backend (other bugs)
Version First Reported In: 0.10.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-10 17:37 UTC by Gerhard Kulzer
Modified: 2022-02-01 11:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard Kulzer 2008-08-10 17:37:08 UTC
Version:           0.10-svn (using KDE 4.1.0)
Installed from:    Ubuntu Packages
OS:                Linux

I specified a working space profile and an input profile (Canon 6101_*.icc) and then try to apply it: digikam crashes. I do the same thing with 0.9.5 and it works. The image file was a jpg. I tried it with several different profiles, it does not make a difference.

Gerhard

konsole output:
digikam(6387): Embedding profile:  "/usr/share/color/icc/sRGB.icm"
digikam(6387): "/usr/share/color/icc/sRGB.icm"
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = digikam path = <unknown> pid = 6387
sock_file=/home/gerhard/.kde4/socket-chucho/kdeinit4__0

Debugger output:
Application: digiKam (digikam), signal SIGSEGV
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb4afa720 (LWP 4654)]
[New Thread 0x9e394b90 (LWP 5260)]
[New Thread 0xa814db90 (LWP 5259)]
[New Thread 0xa63ffb90 (LWP 4825)]
[New Thread 0xa77a4b90 (LWP 4824)]
[New Thread 0xa8afeb90 (LWP 4823)]
[New Thread 0xa4da8b90 (LWP 4822)]
[New Thread 0xa92ffb90 (LWP 4717)]
[New Thread 0xab189b90 (LWP 4675)]
[New Thread 0xab98ab90 (LWP 4674)]
[New Thread 0xac18bb90 (LWP 4672)]
[New Thread 0xaca07b90 (LWP 4668)]
[New Thread 0xad2b7b90 (LWP 4666)]
[New Thread 0xadab8b90 (LWP 4665)]
[New Thread 0xae6c4b90 (LWP 4664)]
[New Thread 0xaeec5b90 (LWP 4663)]
[New Thread 0xaf73bb90 (LWP 4661)]
[New Thread 0xb2a0fb90 (LWP 4659)]
[New Thread 0xb220eb90 (LWP 4658)]
[New Thread 0xb34cdb90 (LWP 4655)]
[KCrash handler]
#6  0x00000000 in ?? ()
#7  0xb71796bc in ~KUrlRequester (this=0x11ed9430)
    at /build/buildd/kde4libs-4.1.0/kio/kfile/kurlrequester.cpp:213
#8  0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#9  0xb5bc65de in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#10 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#11 0xb5bc65de in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#12 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#13 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#14 0xb5f058d1 in QFrame::~QFrame () from /usr/lib/libQtGui.so.4
#15 0xb5f9979d in QAbstractScrollArea::~QAbstractScrollArea ()
   from /usr/lib/libQtGui.so.4
#16 0xb5f9dbc5 in QScrollArea::~QScrollArea () from /usr/lib/libQtGui.so.4
#17 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#18 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#19 0xb5f058d1 in QFrame::~QFrame () from /usr/lib/libQtGui.so.4
#20 0xb5f90325 in QToolBox::~QToolBox () from /usr/lib/libQtGui.so.4
#21 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#22 0xb5bc65de in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#23 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#24 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#25 0xb5f058d1 in QFrame::~QFrame () from /usr/lib/libQtGui.so.4
#26 0xb5f70e05 in QStackedWidget::~QStackedWidget ()
   from /usr/lib/libQtGui.so.4
#27 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#28 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#29 0xb5f058d1 in QFrame::~QFrame () from /usr/lib/libQtGui.so.4
#30 0xb5f6cc51 in QSplitter::~QSplitter () from /usr/lib/libQtGui.so.4
#31 0xb7cfdc9e in ~SidebarSplitter (this=0xf48bee0)
    at /home/gerhard/OSS/graphics4/digikam/libs/widgets/common/sidebar.cpp:360
#32 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#33 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#34 0xb5f058d1 in QFrame::~QFrame () from /usr/lib/libQtGui.so.4
#35 0xb6e12745 in ~KHBox (this=0xd940270)
    at /build/buildd/kde4libs-4.1.0/kdeui/widgets/khbox.cpp:51
#36 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#37 0xb5bc65de in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#38 0xb66c3e3c in QObjectPrivate::deleteChildren ()
   from /usr/lib/libQtCore.so.4
#39 0xb5bc6d1e in QWidget::~QWidget () from /usr/lib/libQtGui.so.4
#40 0xb5fdf396 in QDialog::~QDialog () from /usr/lib/libQtGui.so.4
#41 0xb6ce3764 in ~KDialog (this=0xbfb7fc80)
    at /build/buildd/kde4libs-4.1.0/kdeui/dialogs/kdialog.cpp:192
#42 0xb7d5093b in ~ImageDlgBase (this=0xbfb7fc80)
    at /home/gerhard/OSS/graphics4/digikam/libs/dialogs/imagedlgbase.cpp:191
#43 0xa973f9b7 in ~ImageEffect_ICCProof (this=0xbfb7fc80)
    at /home/gerhard/OSS/graphics4/digikam/imageplugins/coreplugin/imageeffect_iccproof.cpp:572
#44 0xa971c9dd in ImagePlugin_Core::slotColorManagement (this=0xa861ae8)
    at /home/gerhard/OSS/graphics4/digikam/imageplugins/coreplugin/imageplugin_core.cpp:281
#45 0xa9721b28 in ImagePlugin_Core::qt_metacall (this=0xa861ae8, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfb7fe4c)
    at /home/gerhard/OSS/graphics4/build/digikam/imageplugins/coreplugin/imageplugin_core.moc:84
#46 0xb66c94f9 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#47 0xb66c9930 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#48 0xb5b72dd1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#49 0xb5b7379f in QAction::activate () from /usr/lib/libQtGui.so.4
#50 0xb5f4eed1 in ?? () from /usr/lib/libQtGui.so.4
#51 0xb5f51734 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#52 0xb6e290d9 in KMenu::mouseReleaseEvent (this=0xdb6feb0, e=0xbfb8058c)
    at /build/buildd/kde4libs-4.1.0/kdeui/widgets/kmenu.cpp:452
#53 0xb5bd14a4 in QWidget::event () from /usr/lib/libQtGui.so.4
#54 0xb5f4c845 in QMenu::event () from /usr/lib/libQtGui.so.4
#55 0xb5b79c0c in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#56 0xb5b7ecd5 in QApplication::notify () from /usr/lib/libQtGui.so.4
#57 0xb6d6ef53 in KApplication::notify (this=0xbfb80dc8, receiver=0xdb6feb0, 
    event=0xbfb8058c)
    at /build/buildd/kde4libs-4.1.0/kdeui/kernel/kapplication.cpp:311
#58 0xb66b46a9 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#59 0xb5b7be21 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#60 0xb5be5f0c in ?? () from /usr/lib/libQtGui.so.4
#61 0xb5be46b1 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#62 0xb5c0d3ba in ?? () from /usr/lib/libQtGui.so.4
#63 0xb502cdd6 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#64 0xb5030193 in ?? () from /usr/lib/libglib-2.0.so.0
#65 0xb503074e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#66 0xb66dff98 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#67 0xb5c0d1b5 in ?? () from /usr/lib/libQtGui.so.4
#68 0xb66b392d in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#69 0xb66b3abd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#70 0xb66b5d3d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#71 0xb5b79567 in QApplication::exec () from /usr/lib/libQtGui.so.4
#72 0x0829315a in ?? ()
#73 0xb5295450 in __libc_start_main () from /lib/tls/i686/cmov/libc.so.6
#74 0x080a7541 in _start ()
#0  0xffffe424 in __kernel_vsyscall ()
Comment 1 Andi Clemens 2008-08-15 17:44:38 UTC
I can confirm this, it even crashes when hitting the cancel button.
Comment 2 Andi Clemens 2008-08-18 12:18:18 UTC
This looks like a race condition we seem to have quite often now in KDE4 / Qt4. A splitter is removed and tries to delete its children or something like that, but the children are already destroyed.
Maybe the explanation is wrong (:-)), but I guess that is somehow the issue.

Andi
Comment 3 Andi Clemens 2008-08-20 23:21:31 UTC
A damn the commit keywords don't work anymore... I have fixed the problem, take a look at the webSVN link:

http://websvn.kde.org/?view=rev&revision=850158