Fixes a race condition that occured on deleting the KUrlRequester objects in Color Management image plugin.

BUG:168852

svn path=/trunk/extragear/graphics/digikam/; revision=850158