imageplugins/coreplugin/imageeffect_iccproof.cpp
@@ -308,9 +308,10 @@ ImageEffect_ICCProof::ImageEffect_ICCProof(QWidget* parent)
     m_inProfilesPath = new KUrlRequester(inProfiles);
     m_inProfilesPath->setMode(KFile::File|KFile::ExistingOnly);
     m_inProfilesPath->setFilter("*.icc *.icm|"+i18n("ICC Files (*.icc; *.icm)"));
-//    KFileDialog *inProfiles_dialog = m_inProfilesPath->fileDialog();
-//    m_iccInPreviewWidget = new Digikam::ICCPreviewWidget(inProfiles_dialog);
-//    inProfiles_dialog->setPreviewWidget(m_iccInPreviewWidget);
+
+    KFileDialog *inProfiles_dialog = m_inProfilesPath->fileDialog();
+    m_iccInPreviewWidget = new Digikam::ICCPreviewWidget(inProfiles_dialog);
+    inProfiles_dialog->setPreviewWidget(m_iccInPreviewWidget);
 
     QPushButton *inProfilesInfo = new QPushButton(i18n("Info..."), inProfiles);
 
@@ -366,12 +367,13 @@ ImageEffect_ICCProof::ImageEffect_ICCProof(QWidget* parent)
     hlay2->setMargin(0);
     hlay2->setSpacing(0);
 
-    m_spaceProfilePath = new KUrlRequester(box2);
+    m_spaceProfilePath = new KUrlRequester(spaceProfiles);
     m_spaceProfilePath->setMode(KFile::File|KFile::ExistingOnly);
     m_spaceProfilePath->setFilter("*.icc *.icm|"+i18n("ICC Files (*.icc; *.icm)"));
-//    KFileDialog *spaceProfiles_dialog = m_spaceProfilePath->fileDialog();
-//    m_iccSpacePreviewWidget = new Digikam::ICCPreviewWidget(spaceProfiles_dialog);
-//    spaceProfiles_dialog->setPreviewWidget(m_iccSpacePreviewWidget);
+
+    KFileDialog *spaceProfiles_dialog = m_spaceProfilePath->fileDialog();
+    m_iccSpacePreviewWidget = new Digikam::ICCPreviewWidget(spaceProfiles_dialog);
+    spaceProfiles_dialog->setPreviewWidget(m_iccSpacePreviewWidget);
 
     QPushButton *spaceProfilesInfo = new QPushButton(i18n("Info..."), box2);
 
@@ -409,12 +411,13 @@ ImageEffect_ICCProof::ImageEffect_ICCProof(QWidget* parent)
     hlay3->setMargin(0);
     hlay3->setSpacing(0);
 
-    m_proofProfilePath = new KUrlRequester(box3);
+    m_proofProfilePath = new KUrlRequester(proofProfiles);
     m_proofProfilePath->setMode(KFile::File|KFile::ExistingOnly);
     m_proofProfilePath->setFilter("*.icc *.icm|"+i18n("ICC Files (*.icc; *.icm)"));
-//    KFileDialog *proofProfiles_dialog = m_proofProfilePath->fileDialog();
-//    m_iccProofPreviewWidget = new Digikam::ICCPreviewWidget(proofProfiles_dialog);
-//    proofProfiles_dialog->setPreviewWidget(m_iccProofPreviewWidget);
+
+    KFileDialog *proofProfiles_dialog = m_proofProfilePath->fileDialog();
+    m_iccProofPreviewWidget = new Digikam::ICCPreviewWidget(proofProfiles_dialog);
+    proofProfiles_dialog->setPreviewWidget(m_iccProofPreviewWidget);
 
     QPushButton *proofProfilesInfo = new QPushButton(i18n("Info..."), box3);
 
