libs/widgets/iccprofiles/iccpreviewwidget.h
@@ -2,11 +2,11 @@
  *
  * This file is a part of digiKam project
  * http://www.digikam.org
- * 
+ *
  * Date        : 2006-01-12
  * Description : a widget to display ICC profiles descriptions
  *               in file dialog preview.
- * 
+ *
  * Copyright (C) 2006-2007 by Francisco J. Cruz <fj.cruz@supercable.es>
  *
  * This program is free software; you can redistribute it
@@ -14,12 +14,12 @@
  * Public License as published by the Free Software Foundation;
  * either version 2, or (at your option)
  * any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * ============================================================ */
 
 #ifndef ICCPREVIEWWIDGET_H
@@ -47,16 +47,16 @@ Q_OBJECT
 
 public:
 
-    ICCPreviewWidget(QWidget *parent);
+    explicit ICCPreviewWidget(QWidget *parent = 0);
     ~ICCPreviewWidget();
 
-public slots:
+public Q_SLOTS:
 
     virtual void showPreview(const KUrl &url);
+    virtual void clearPreview();
 
 protected:
 
-    virtual void clearPreview();
     virtual void virtual_hook(int, void*){};
 
 private :
